--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -500,6 +500,7 @@
 		@include vendor('flex-direction', 'column');
 		@include vendor('justify-content', 'space-between');
 		background: #222629 url('images/overlay.png');
+		// background: #38221a url('images/overlay.png');
 		box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
 		color: #fff;
 		height: 100%;
